style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
}

a {
  text-decoration: none;
  color: #E5E7EB;
}

a:hover {
  transition: 0.2s;
  opacity: 0.6;
}

header,
footer {
  background-color: #1F2937;
  padding: 20px 0;
}

ul {
  list-style: none;
}

.logo,
.head-link,
button {
  cursor: pointer;
}

/* Buttons */
button {
  font-weight: bold;
  background-color: #3882F6;
  padding: 9px 32px;
  border-radius: 7px;
}

.btn-primary {
  color: #F9FAF8;
  border: 2px solid #3882F6;
}

.btn-secondary {
  color: #E5E7EB;
  border: 2px solid #E5E7EB;
}

button:hover {
  opacity: 0.8;
  transition: 0.2s;
}

.btn-secondary:hover {
  background-color: #E5E7EB;
  color: #3882F6;
  opacity: 1;
}

/* HEADER SECTION */

/* NAV */
nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

nav #logo {
  font-size: 24px;
  color: #F9FAF8;
}

nav #logo:hover {
  opacity: 1;
}

nav .header-links,
.showcase .text-container p {
  font-size: 18px;
  color: #E5E7EB;
}

nav ul {
  display: flex;
}

nav ul li {
  margin: 0 20px;
}

/* Showcase */
.showcase {
  display: flex;
  padding: 100px;
}

.showcase .text-container,
.showcase .image-container {
  flex: 1;
  width: 50%;
  padding: 0 50px;
}

.showcase .text-container h1 {
  font-size: 48px;
  font-weight: 900;
  color: #F9FAF8;
}

.showcase .text-container p {
  margin: 15px 0;
}

.showcase .image-container {
  background: url('https://source.unsplash.com/random') no-repeat center center /cover;
  width: 100%;
  height: auto;
}

/* MAIN SECTION */

/* Services */
.services {
  padding: 50px;
}

.services h2 {
  font-size: 36px;
  font-weight: 900;
  color: #1F2937;
  text-align: center;
  margin-bottom: 50px;
}

.services .cards {
  display: flex;
  /* flex-wrap: wrap; */
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 50px 50px;
}

.services ul li {
  margin: 0 20px;
  padding: 30px 0;
}

.services ul li i {
  color: #3882F6;
}

.services ul li p {
  margin: 30px 0 0;
}

/* Epic Quote */
.quote {
  background-color: #E5E7EB;
  padding: 50px;
}

.quote figure {
  margin: 80px 150px;
}

.quote figure blockquote {
  font-size: 36px;
  font-weight: 300;
  font-style: italic;
}

.quote figure figcaption {
  margin-top: 30px;
  text-align: end;
  font-weight: bold;
}

/* Call to Action */
.action-container {
  padding: 50px;
}

.content-container {
  display: flex;
  justify-content: space-around;
  color: #E5E7EB;
  border-radius: 10px;
  background-color: #3882F6;
  margin: 50px 100px;
  padding: 50px;
}

/* FOOTER SECTION */
footer {
  text-align: center;
}

footer h4 {
  margin: 20px 0;
  color: #E5E7EB;
  font-weight: 300;
}

footer h4 a {
  border-bottom: 1px solid #E5E7EB;
  padding-bottom: 2px;
}

footer h4 a:hover {
  color: #cc9543;
  opacity: 1;
  border-bottom: 1px solid #cc9543;
}

